# Bsides-Workshop-Demo-Agent-RCE-Zero-Click-Attack

./: .env.example  .gitignore  CHATGPT_PRESENTATION_BRIEF.md  DEFENSES.md  Dockerfile.sandbox  HOW_IT_WORKS.md  IMPLEMENTATION_PLAN.md  OBFUSCATION.md  PRESENTATION_SLIDES.md  PRESENTATION_SLIDES_PROFESSIONAL.md  README.md  future_additions.md  pyproject.toml  requirements.txt  specter  workshop-slides-professional-old.html  workshop-slides-professional.html  workshop-slides.html
demo/: __init__.py  agents.py  approval.py  atlas.py  cli.py  crew.py  crewai_shim.py  ctf.py  diff.py  graph.py  llm.py  logging.py  memory.py  mock_commands.py  multitenant.py  obfuscation_test_runner.py  policy.py  rag_store.py  replay.py  report.py  runner.py  sandbox.py  schemas.py  server.py  specter_cli.py  tasks.py  tools.py  tui.py  utils.py
fixtures/llm_cache/: README.md
policies/: README.md  policy.rego
tests/: test_defended.py  test_obfuscation_detection.py  test_policy.py
web_fixtures/: base64_runbook.md  bidi_runbook.md  canary_runbook.md  clean_runbook.md  confused_deputy_runbook.md  homoglyph_runbook.md  latent_runbook.md  markdown_table_runbook.md  poisoned_runbook.md  rag_ambiguity_runbook.md  rag_poisoned_runbook.md  steganography_runbook.md  supply_chain_runbook.md  toolshaping_runbook.md  yaml_runbook.md
web_fixtures/scenarios/: confluence_runbook_runbook.md  github_pr_comment_runbook.md  npm_readme_runbook.md  slack_alert_runbook.md
