[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specter"
version = "1.0.0"
description = "AI Agent Memory Poisoning & Zero-Click RCE Simulator — BSides Workshop"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
specter = "demo.specter_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["demo*"]
